--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/Task1/style.css" />
-    <title>Vite + React</title>
+    <title>Task 1 to 4</title>
+
   </head>
   <body>
     <div id="root"></div>
